added links to app windows

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,37 +20,37 @@
 				<h3>Lorem Ipsum sevit mit</h3>			
 			</div>
 			<div class="apps-area">
+					<div class="app-window">
+						<div class="app-desc">
+							<p>Single-page Trello Clone</p>
+						</div><!--
+						--><a target="_blank" href="https://fathomless-island-59120.herokuapp.com"><div class="app-image">
+							<img src="http://placehold.it/300x250" alt="app" />
+						</div></a>
+					</div>
 				<div class="app-window">
 					<div class="app-desc">
-						<p>Lorem Ipsum nimbus</p>
+						<p>Sushi store with cart</p>
 					</div><!--
-					--><div class="app-image">
+					--><a target="_blank" href="https://pure-reef-92205.herokuapp.com/menu"><div class="app-image">
 						<img src="http://placehold.it/300x250" alt="app" />
-					</div>
+					</div></a>
 				</div>
 				<div class="app-window">
 					<div class="app-desc">
-						<p>Lorem Ipsum nimbus</p>
+						<p>Blog post application with user auth</p>
 					</div><!--
-					--><div class="app-image">
+					--><a target="_blank" href="https://mysterious-sierra-82357.herokuapp.com/"><div class="app-image">
 						<img src="http://placehold.it/300x250" alt="app" />
-					</div>
+					</div></a>
 				</div>
 				<div class="app-window">
 					<div class="app-desc">
-						<p>Lorem Ipsum nimbus</p>
+						<p>Client-side todo list</p>
 					</div><!--
-					--><div class="app-image">
+					--><a target="_blank" href="https://spidermastermind.github.io/todos_site/todo.html"><div class="app-image">
 						<img src="http://placehold.it/300x250" alt="app" />
-					</div>
-				</div>
-				<div class="app-window">
-					<div class="app-desc">
-						<p>Lorem Ipsum nimbus</p>
-					</div><!--
-					--><div class="app-image">
-						<img src="http://placehold.it/300x250" alt="app" />
-					</div>
+					</div></a>
 				</div>				
 			</div>
 			<div class="articles-area hidden">
