logo positioning, app screenshots, jekyll-octoicon gem include

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,53 +8,55 @@
 	<main>
 		<nav>
 			<ul>
-				<li><a href="#">About |</a></li>
-				<li><a href="#">Apps |</a></li>
-				<li><a href="#">Articles</a></li>
+				<li><a href="#">Hosted Apps</a></li>
 			</ul>
 		</nav>
 		<div id="content">
-			<div class="blurb-area hidden">
-				<h3>Lorem Ipsum sevit mit</h3>
-				<h3>Lorem Ipsum sevit mit</h3>
-				<h3>Lorem Ipsum sevit mit</h3>			
-			</div>
+			<!-- <div class="blurb-area hidden"> -->
+			<!-- 	<h3>Lorem Ipsum sevit mit</h3> -->
+			<!-- 	<h3>Lorem Ipsum sevit mit</h3> -->
+			<!-- 	<h3>Lorem Ipsum sevit mit</h3> -->			
+			<!-- </div> -->
 			<div class="apps-area">
 					<div class="app-window">
 						<div class="app-desc">
-							<p>Single-page Trello Clone</p>
+							<h4>Single-page Trello Clone</h4>
+							<p>Node/Express, Backbone, JQuery
 						</div><!--
 						--><a target="_blank" href="https://fathomless-island-59120.herokuapp.com"><div class="app-image">
-							<img src="http://placehold.it/300x250" alt="app" />
+							<img src="trello-screenshot-max.png" alt="app" />
 						</div></a>
 					</div>
 				<div class="app-window">
 					<div class="app-desc">
-						<p>Sushi store with cart</p>
+						<h4>Sushi store with cart</h4>
+						<p>Node/Express, Backbone, JQuery
 					</div><!--
 					--><a target="_blank" href="https://pure-reef-92205.herokuapp.com/menu"><div class="app-image">
-						<img src="http://placehold.it/300x250" alt="app" />
+						<img src="sushi-screenshot-max.png" alt="app" />
 					</div></a>
 				</div>
 				<div class="app-window">
 					<div class="app-desc">
-						<p>Blog post application with user auth</p>
+						<h4>Blog post application</h4>
+						<p>Rails, Bootstrap
 					</div><!--
 					--><a target="_blank" href="https://mysterious-sierra-82357.herokuapp.com/"><div class="app-image">
-						<img src="http://placehold.it/300x250" alt="app" />
+						<img src="postit-screenshot-max.png" alt="app" />
 					</div></a>
 				</div>
 				<div class="app-window">
 					<div class="app-desc">
-						<p>Client-side todo list</p>
+						<h4>Client-side todo list</h4>
+						<p>HTML, CSS, Javascript
 					</div><!--
 					--><a target="_blank" href="https://spidermastermind.github.io/todos_site/todo.html"><div class="app-image">
-						<img src="http://placehold.it/300x250" alt="app" />
+						<img src="todos-screenshot-max.png" alt="app" />
 					</div></a>
 				</div>				
-			</div>
-			<div class="articles-area hidden">
-			</div>
+			<!-- </div> -->
+			<!-- <div class="articles-area hidden"> -->
+			<!-- </div> -->
 		</div>
 	</main>
 </body>
