--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,9 +1,10 @@
 <div class="logo">
-	<h1>ben</h1>
-	<br />
-	<h1>stacey</h2>
-	<br />
-	<h1>logo</h1>
+	<div id="gridbox">
+	<div class="text">
+		<img src="logoCutOut.png" alt ="test"/>
+	</div>
+	</div>
+
 </div>
 <div class="panel info">
 	<h4>Full Stack Developer</h4>
@@ -13,9 +14,10 @@
 <div class="contact">
 	<ul>
 		<li><a href="#">bstacey37@gmail.com</a></li>
-		<li><a href="#">spidermastermind</a></li>
+		<li><a href="#">GitHub</a></li>
 		<li><a href="#">Twitter</a></li>
-		<li><a href="#">CV Pdf</a></li>
 	</ul>
 </div>
+<script src="mysite.js"></script>
+
 		
