logo colour, font family

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
 
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<link rel="stylesheet" href="/css/base.css">
+	<link href="https://fonts.googleapis.com/css?family=Titillium+Web:600" rel="stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 </head>
 	
