--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,9 +13,9 @@
 </div>
 <div class="contact">
 	<ul>
-		<li><a href="#">bstacey37@gmail.com</a></li>
-		<li><a href="#">GitHub</a></li>
-		<li><a href="#">Twitter</a></li>
+		<li><a href="mailto:bstacey37@gmail.com">bstacey37@gmail.com</a></li>
+		<li><a href="https://github.com/SpiderMasterMind">GitHub</a></li>
+		<li><a href="https://twitter.com/_benstacey">Twitter</a></li>
 	</ul>
 </div>
 <script src="mysite.js"></script>
