--- a/css/base.scss
+++ b/css/base.scss
@@ -3,13 +3,12 @@
 
 $content-width: 800px;
 $main: #19CCAA;
-$font-style: 'Open Sans', sans-serif;
+$font-family: 'Titillium Web', sans-serif;
 $font-color: #FFFFFF;
 $link-hover-color: $main;
-$heading-font: 'Muli', sans-serif;
-$heading-font-color: #425469;
 $background-color: black;
 $panel-color: #272a2d;
+$logo-color: #3ea023;
 
 @import "whitespace-reset";
 @import "styles";
