added media rules

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
 	</div>
 
 </div>
-<div class="panel info">
+<div class="info">
 	<h4>Full Stack Developer</h4>
 	<h4>Javascript/Ruby/HTML/CSS</h4>
 	<h4>Brighton, UK</h4>	
@@ -18,6 +18,5 @@
 		<li><a href="https://twitter.com/_benstacey">Twitter</a></li>
 	</ul>
 </div>
-<script src="mysite.js"></script>
 
 		
