--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,15 +8,10 @@
 	<main>
 		<nav>
 			<ul>
-				<li><a href="#">Hosted Apps</a></li>
+				<li><a href="#">Hosted Projects</a></li>
 			</ul>
 		</nav>
 		<div id="content">
-			<!-- <div class="blurb-area hidden"> -->
-			<!-- 	<h3>Lorem Ipsum sevit mit</h3> -->
-			<!-- 	<h3>Lorem Ipsum sevit mit</h3> -->
-			<!-- 	<h3>Lorem Ipsum sevit mit</h3> -->			
-			<!-- </div> -->
 			<div class="apps-area">
 					<div class="app-window">
 						<div class="app-desc">
@@ -54,11 +49,10 @@
 						<img src="todos-screenshot-max.png" alt="app" />
 					</div></a>
 				</div>				
-			<!-- </div> -->
-			<!-- <div class="articles-area hidden"> -->
-			<!-- </div> -->
 		</div>
 	</main>
 </body>
+
+<script src="mysite.js"></script>
 
 </html>
