--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -99,7 +99,7 @@ nav {
 	border-top-left-radius: 0;		
 	}
 	img:hover {
-	border: 8px solid white;
+	border: 8px solid $logo-color;
 	}
 }
 
@@ -122,7 +122,7 @@ aside .panel {
 #gridbox {
   width: 240px;
   height: 120px;
-	line-height: 0.6;
+	line-height: 0.5;
 	position: relative;
 	z-index: 1;
 }
@@ -138,8 +138,8 @@ aside .panel {
 
 .text {
 	position: absolute;
-	width: 240px;
-	height: 120px;
+	width: 242px;
+	height: 122px;
 	z-index: 2;
 }
 
@@ -155,6 +155,17 @@ aside .panel {
 	margin-top: 30px;
 	padding: 10px;
 }
+
+.contact a {
+	margin-left: 5px;
+}
+
+#github img,
+#twitter img{
+	position: relative;
+	top: 3px;
+}
+
 
 .contact a:hover {
 	color: $logo-color;
@@ -178,7 +189,7 @@ aside .panel {
 	}
 }
 
-@media (max-width: 768px) {
+@media (max-width: 980px) {
 	aside {
 		float: none;
 	}
