untarget contact anchors

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 							<h4>Single-page Trello Clone</h4>
 							<p>Node/Express, Backbone, JQuery
 						</div><!--
-						--><a target="_blank" href="https://fathomless-island-59120.herokuapp.com"><div class="app-image">
+						--><a href="https://fathomless-island-59120.herokuapp.com"><div class="app-image">
 							<img src="trello-screenshot-max.png" alt="app" />
 						</div></a>
 					</div>
@@ -27,7 +27,7 @@
 						<h4>Sushi store with cart</h4>
 						<p>Node/Express, Backbone, JQuery
 					</div><!--
-					--><a target="_blank" href="https://pure-reef-92205.herokuapp.com/menu"><div class="app-image">
+					--><a href="https://pure-reef-92205.herokuapp.com/menu"><div class="app-image">
 						<img src="sushi-screenshot-max.png" alt="app" />
 					</div></a>
 				</div>
@@ -36,7 +36,7 @@
 						<h4>Blog post application</h4>
 						<p>Rails, Bootstrap
 					</div><!--
-					--><a target="_blank" href="https://mysterious-sierra-82357.herokuapp.com/"><div class="app-image">
+					--><a href="https://mysterious-sierra-82357.herokuapp.com/"><div class="app-image">
 						<img src="postit-screenshot-max.png" alt="app" />
 					</div></a>
 				</div>
@@ -45,7 +45,7 @@
 						<h4>Client-side todo list</h4>
 						<p>HTML, CSS, Javascript
 					</div><!--
-					--><a target="_blank" href="https://spidermastermind.github.io/todos_site/todo.html"><div class="app-image">
+					--><a href="https://spidermastermind.github.io/todos_site/todo.html"><div class="app-image">
 						<img src="todos-screenshot-max.png" alt="app" />
 					</div></a>
 				</div>				
