--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,8 +14,8 @@
 <div class="contact">
 	<ul>
 		<li id="mail"><img src="mail.png" /><a href="mailto:bstacey37@gmail.com">bstacey37@gmail.com</a></li>
-		<li id="github"><img src="github.png" /><a href="https://github.com/SpiderMasterMind">GitHub</a></li>
-		<li id="twitter"><img src="twitter.png" /><a href="https://twitter.com/_benstacey">Twitter</a></li>
+		<li id="github"><img src="github.png" /><a href="http://github.com/SpiderMasterMind">GitHub</a></li>
+		<li id="twitter"><img src="twitter.png" /><a href="http://twitter.com/_benstacey">Twitter</a></li>
 	</ul>
 </div>
 
