--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,7 @@
 </div>
 <div class="info">
 	<h4>Full Stack Developer</h4>
-	<h4>Javascript/Ruby/HTML/CSS</h4>
+	<h4> - seeking next oppurtunity</h4>
 	<h4>Brighton, UK</h4>	
 </div>
 <div class="contact">
