--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 	<main>
 		<nav>
 			<ul>
-				<li><a href="#">Hosted Projects</a></li>
+				<li><a href="#">Demo Projects</a></li>
 			</ul>
 		</nav>
 		<div id="content">
@@ -16,7 +16,7 @@
 					<div class="app-window">
 						<div class="app-desc">
 							<h4>Single-page Trello Clone</h4>
-							<p>Node/Express, Backbone, JQuery
+							<p>Node/Express, Backbone, JQuery</p>
 						</div><!--
 						--><a target="_top" href="https://fathomless-island-59120.herokuapp.com"><div class="app-image">
 							<img src="trello-screenshot-max.png" alt="app" />
@@ -25,7 +25,7 @@
 				<div class="app-window">
 					<div class="app-desc">
 						<h4>Sushi store with cart</h4>
-						<p>Node/Express, Backbone, JQuery
+						<p>Node/Express, Backbone.js, JQuery</p>
 					</div><!--
 					--><a target="_top" href="https://pure-reef-92205.herokuapp.com/menu"><div class="app-image">
 						<img src="sushi-screenshot-max.png" alt="app" />
@@ -33,8 +33,8 @@
 				</div>
 				<div class="app-window">
 					<div class="app-desc">
-						<h4>Blog post application</h4>
-						<p>Rails, Bootstrap
+						<h4>Reddit-like blog post application</h4>
+						<p>Rails, Bootstrap</p>
 					</div><!--
 					--><a target="_top" href="https://mysterious-sierra-82357.herokuapp.com/"><div class="app-image">
 						<img src="postit-screenshot-max.png" alt="app" />
@@ -42,8 +42,8 @@
 				</div>
 				<div class="app-window">
 					<div class="app-desc">
-						<h4>Client-side todo list</h4>
-						<p>HTML, CSS, Javascript
+						<h4>Todo list</h4>
+						<p>Vanilla JS, HTML, CSS</p>
 					</div><!--
 					--><a target="_top" href="https://spidermastermind.github.io/todos_site/todo.html"><div class="app-image">
 						<img src="todos-screenshot-max.png" alt="app" />
