iphone screen adjustment

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 	<main>
 		<nav>
 			<ul>
-				<li><a href="#">Demo Projects</a></li>
+				<li><a href="#">Demo Projects - click to open</a></li>
 			</ul>
 		</nav>
 		<div id="content">
